--- a/siscontecSD/WebContent/WEB-INF/web.xml
+++ b/siscontecSD/WebContent/WEB-INF/web.xml
@@ -9,4 +9,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>LoginAdminServlet</display-name>
+    <servlet-name>LoginAdminServlet</servlet-name>
+    <servlet-class>siscontec.servlet.LoginAdminServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LoginAdminServlet</servlet-name>
+    <url-pattern>/LoginAdminServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
